--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "symfony/runtime": "6.4.*",
         "symfony/twig-bundle": "6.4.*",
         "symfony/yaml": "6.4.*",
-        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/extra-bundle": "^3.8",
+        "twig/string-extra": "^3.8",
         "twig/twig": "^2.12|^3.0"
     },
     "config": {
